@@ -16,7 +16,9 @@ ver 0.24.1 (2025/03/21)
 * Linux
   - add configure-time check for openat2()
   - fix use-after-free bug on io_uring shutdown
-* macOS: implement standard directories
+* macOS
+  - implement standard directories
+  - fix command-line parser errors
 * fix build failure in the "id3tag" Meson subproject
 * doc: use "sphinx_rtd_theme" only if it is installed
 
